# EvalForge

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
docs/: architecture.md  integrations.md  publishing.md
evalforge/: __init__.py  cli.py  config.py  models.py
evalforge/agent/: __init__.py  agent.py  tools.py
evalforge/core/: __init__.py  clusterer.py  fetcher.py  generator.py  runner.py
evalforge/exporters/: __init__.py  csv_exporter.py  html_reporter.py  json_exporter.py
evalforge/ui/: __init__.py  app.py
evalforge/ui/templates/: index.html
examples/customer_support/: README.md  mock_phoenix.py  run_evalforge.py
scripts/: bump_version.py  check_pipeline.py
tests/: test_cli.py  test_clusterer.py  test_config.py  test_exporters.py  test_fetcher.py  test_generator.py  test_models.py  test_runner.py
