[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "evalforge"
version = "0.1.0"
description = "Auto-generate eval suites from your production AI agent traces"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "EvalForge Contributors" }]
keywords = ["llm", "evals", "ai", "testing", "phoenix", "gemini", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "google-generativeai>=0.7.0",
    "google-adk>=0.3.0",
    "arize-phoenix-client>=0.1.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "jinja2>=3.1.0",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
evalforge = "evalforge.cli:app"

[project.urls]
Homepage = "https://github.com/evalforge/evalforge"
Documentation = "https://evalforge.dev/docs"
Repository = "https://github.com/evalforge/evalforge"
Issues = "https://github.com/evalforge/evalforge/issues"
Changelog = "https://github.com/evalforge/evalforge/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["evalforge*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
