[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evalforge"
version = "0.1.0"
description = "Auto-generate eval suites from your production AI agent traces"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "EvalForge Contributors" }]
keywords = [
    "llm", "evals", "ai", "testing", "phoenix", "gemini", "agent",
    "evaluation", "llm-testing", "ai-agent", "arize", "observability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.10"

# Core dependencies — kept minimal so `pip install evalforge` is fast
dependencies = [
    "google-genai>=1.0.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
# pip install evalforge[ui]  — web dashboard
ui = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",
]

# pip install evalforge[agent]  — Google ADK orchestration
agent = [
    "google-adk>=0.3.0",
]

# pip install evalforge[phoenix]  — Arize Phoenix client
phoenix = [
    "arize-phoenix-client>=0.1.0",
]

# pip install evalforge[embeddings]  — local neural embeddings (no API key)
embeddings = [
    "sentence-transformers>=3.0.0",
]

# pip install evalforge[all]  — everything
all = [
    "evalforge[ui,agent,phoenix,embeddings]",
]

# pip install evalforge[dev]  — development tools (tests + lint only, no heavy optionals)
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "build>=1.2.0",
    "twine>=5.0.0",
]

[project.scripts]
evalforge = "evalforge.cli:app"

[project.urls]
Homepage = "https://github.com/evalforge/evalforge"
Documentation = "https://evalforge.dev/docs"
Repository = "https://github.com/evalforge/evalforge"
Issues = "https://github.com/evalforge/evalforge/issues"
Changelog = "https://github.com/evalforge/evalforge/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/evalforge/evalforge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["evalforge*"]

[tool.setuptools.package-data]
"evalforge.ui" = ["templates/*.html", "static/**/*"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["evalforge"]

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-ra -q"

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["evalforge"]
omit = ["tests/*", "scripts/*", "examples/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60
